--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8"
 torch = "^1.7.0"
 torchvision = "^0.8.1"
 tensorflow = "^2.3.1"
+torchsummary = "^1.5.1"
+matplotlib = "^3.3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
