--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ torchvision = "^0.8.1"
 tensorflow = "^2.3.1"
 torchsummary = "^1.5.1"
 matplotlib = "^3.3.3"
+pathlib = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
